fix(abc:se): fix `se-title` misalignment (#840)
- close https://github.com/ng-alain/ng-alain/issues/1584

--- a/packages/abc/se/style/index.less
+++ b/packages/abc/se/style/index.less
@@ -10,6 +10,7 @@
     font-weight: 700;
     font-size: 14px;
     line-height: @line-height-base;
+    width: 100%;
   }
 
   &__item {
